# baml-pydantic-comparison

./: README.md  api_bench.ipynb  pyproject.toml
app/: main.py
baml_client/__do_not_import/: generated_baml_client.py
baml_client/__do_not_import/clients/: client_llama2.py  client_mistral.py
baml_client/__do_not_import/functions/: fx_analyzerestorationproject.py  fx_analyzerestorationproject.pyi  fx_extractorderinfo.py  fx_extractorderinfo.pyi  fx_extractorderinfo2.py  fx_extractorderinfo2.pyi  fx_extractorderinfo3.py  fx_extractorderinfo3.pyi  fx_extractpii.py  fx_extractpii.pyi
baml_client/__do_not_import/impls/: __init__.py  fx_analyzerestorationproject_impl_v1.py  fx_classifymessage_impl_level1.py  fx_extractorderinfo2_impl_v2.py  fx_extractorderinfo3_impl_llama2.py  fx_extractorderinfo3_impl_v1.py  fx_extractorderinfo_impl_v1.py  fx_extractpii_impl_v1.py  fx_extractresume_impl_version1.py
baml_client/__do_not_import/types/: __init__.py
baml_client/__do_not_import/types/classes/: cls_address.py  cls_complexrestorationproject.py  cls_item.py  cls_orderinfo.py  (+6 more)
baml_client/baml_types/: __init__.py  partial.py
baml_client/tests/: test_analyzerestorationproject.py  test_classifymessage.py  test_extractorderinfo3.py  test_extractresume.py
baml_src/: clients.baml  orderinfo.baml
baml_src/__tests__/AnalyzeRestorationProject/: europedoc.json
baml_src/__tests__/ExtractOrderInfo3/: test1.json
baml_src/pytest_functions/: extract_entities.baml  extract_pii.baml  orderinfo.baml
tests/: test_extract_entities.py  test_order_info.py  test_pii_extraction.py
(+15 files in other folders)
